import "rec/util/thread/Thread.proto";

package rec.audio.source;

message RunnyProto {
  optional uint32 buffer_size = 1 [default = 256000];
  optional uint32 chunk_size = 2 [default = 1024];
  optional util.thread.ThreadDescription thread = 3;
};

